# DevinFeNextJsBeDjangoOpenSearchTemplate

./: .dockerignore  .envrc.example  .gitignore  README.md  docker-compose.mac.yaml  docker-compose.ubuntu.yaml  remake-container.sh
.claude/: settings.local.json
.github/: dependabot.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  start.sh
backend/app/api/: apis.py
backend/app/config/: settings.py  urls.py
backend/app/search/: constants.py
backend/app/search/management/commands/: add_dummy_seach_index.py  add_dummy_search_index.py  search.py  show_search_result.py
frontend/: .dockerignore  Dockerfile.mac  Dockerfile.ubuntu  eslint.config.mjs  package-lock.json  package.json
frontend/app/: page.tsx
opensearch/: Dockerfile
opensearch/secrets/: opensearch.netrc.example
