[project]
name = "fe-nextjs-be-django"
version = "0.1.0"
description = "FE Next.js BE Django"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django==6.0",
    "psycopg2==2.9.11",
    "django-ninja==1.5.1",
    "Markdown==3.10",
    "django-filter==25.2",
    "django-cors-headers==4.9.0",
    "opensearch-py==3.1.0",
]

[dependency-groups]
dev = [
    "ruff==0.14.9",
    "pytest==9.0.2",
    "pytest-django==4.11.1",
    "factory-boy==3.3.3",
]

[tool.uv]
link-mode = "copy"


[tool.pytest.ini_options]
testpaths = ["app/tests"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
explicit_package_bases = true

[tool.django-stubs]
django_settings_module = "config.settings"

[[tool.mypy.overrides]]
module = ["debug_toolbar.*"]
ignore_missing_imports = true

[tool.ruff.lint]
ignore = [
]

select = [
   "I",
]
